<resources>
    <string name="app_name">Anlien</string>
    <string name="my_activity">Mes activités</string>
    <string name="create_activity">Créer une activité</string>
    <string name="qr_code">qr_code</string>
    <string name="chat">Discussion</string>
    <string name="my_friends">Mes amis</string>
    <string name="my_event">Mon évènnement</string>
    <string name="my_options">Mon profil</string>
    <string name="no_friend">Vous n\'avez pas encore d\'amis</string>
    <string name="scan_friend_qr_code">Toucher pour scanner un QR code</string>
    <string name="no_event">Aucun évènement n\'est à venir</string>
    <string name="no_event_create_one">Toucher pour en créer un</string>
    <string name="wait_invitation">Attendez que quelqu\'un vous invite</string>
    <string name="or">Ou</string>
    <string name="made_in_france">Fabriquée en France</string>
    <string name="title">Anlien</string>
    <string name="enter_public_name">Entrez votre nom public</string>
    <string name="friend_search_issue">Oups! Personne ne personne n\'a été trouvé</string>
    <string name="new_event_name">Nom de l\'évènement</string>
    <string name="choose_date">Selectionner une date</string>
    <string name="event_address">Adresse de l\'évènement</string>
    <string name="participants">Participants:</string>
    <string name="validate">Valider</string>
    <string name="error_name_or_address">Erreur dans le nom ou l\'adresse</string>
    <string name="creation_failed">La création a échouée</string>
    <string name="send_message">Envoyer un message</string>
    <string name="chat_listen_failed">Erreur lors de l\'initialisation du chat</string>
    <string name="chat_data_empty">La donnée est vide</string>
    <string name="information">Informations</string>
    <string name="discussion">Discussion</string>
    <string name="shopping_list_empty">La liste de course est vide</string>
    <string name="shopping">Courses</string>
    <string name="click_to_add_item">Toucher pour ajouter quelque chose</string>
    <string name="no_pot">Aucune cagnotte n\'est disponible</string>
    <string name="pot">Cagnotte</string>
    <string name="present">Ma présence</string>
    <string name="participant_title">Participants</string>
    <string name="member_of_event">Vous participez à l\'activité</string>
    <string name="not_member_of_event">Vous ne participez plus à l\'activité</string>
    <string name="what_needed">Que faut-il ramener ?</string>
    <string name="seletect_time">Selectionner une heure</string>
    <string name="description">Description</string>
    <string name="touche_to_take">Toucher pour prendre</string>
    <string name="delete">Supprimer</string>
    <string name="are_you_sure">Etes-vous sûr(e)?</string>
    <string name="yes">Oui</string>
    <string name="alone_in_event">Vous êtes le seul à participer à l\'activité</string>
    <string name="touch_to_add_friend">Toucher pour ajouter des amis</string>
    <string name="event_update_success">Activité mise à jour avec succès</string>
    <string name="event_delete_success">Activité supprimée avec succès</string>
    <string name="organizer">Organisateur</string>
    <string name="already_subscribe">Vous êtes déjà inscrit</string>
    <string name="manage">Gestion</string>
    <string name="private_event">L\'activité est désormais privée</string>
    <string name="public_event">L\'activité est désormais public</string>
    <string name="enter_identifiant">Entrez un identifiant</string>
    <string name="for_me">Je m\'en occupe !</string>
    <string name="not_for_me">Je ne m\'en occupe pas</string>
    <string name="back_icon">back icon</string>
    <string name="create_button">create_button</string>
    <string name="add_participant">add participant</string>
    <string name="participant_list_edition">participant list edition</string>
    <string name="default_notification_channel_string">channel notification</string>
    <string name="not_friend">Vous n\'êtes pas amis</string>
    <string name="address_modification_forbiden">Vous ne pouvez pas modifier l\'adresse</string>
    <string name="not_event_qr_code">Ce QR n\'est pas celui d\'un évènement valide</string>
    <string name="not_valid_qr_code">Ce n\'est pas un QR valide</string>
    <string name="help_project">Soutenir le projet</string>
    <string name="congrats_new_badge">Bravo, vous avez obtenu un nouveau badge !</string>
    <string name="alpha_user">Alpha testeur</string>
    <string name="cash">Cagnotte</string>
    <string name="buys">Courses</string>
    <string name="info">Info</string>
    <string name="friends">Friends</string>
    <string name="home">Home</string>
    <string name="option">Option</string>

    <string name="image_description">Image description</string>
    <string name="compte">Compte</string>
    <string name="import_picture">Importer une image</string>
    <string name="start_travel">Demarrer le trajet vers la destination</string>
    <string name="no_yet_participant">Vous ne participez pas encore à l\'évènement</string>
    <string name="event_participant">Vous participez à l\'évènement</string>
    <string name="event_not_particpant">Vous ne participez pas à l\'évènement</string>
    <string name="event_organizer">Organisateur de l\'évènement</string>
    <string name="update">Mettre à jour l\'évènement</string>
    <string name="badge_update_success">Badge mis à jour avec succès</string>
    <string name="you">C\'est vous !</string>
    <string name="friend_request_already_done">Demande déjà envoyée</string>
    <string name="already_friends">Vous êtes déjà amis</string>
    <string name="ask">Demande</string>
    <string name="want_to_be_your_friend">\" souhaite être votre ami\"</string>
    <string name="update_failure">Echec de la mise à jour</string>
</resources>