<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:colorPrimary"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_marginStart="10dp"
                app:tint="?android:attr/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back_icon" />

            <TextView
                android:id="@+id/activity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_event"
                android:layout_marginStart="10dp"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/event_information_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.940"
        android:paddingTop="10dp">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            tools:ignore="UselessParent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/event_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry">

                    <EditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@drawable/round_corner_small"
                        android:gravity="center"
                        android:hint="@string/new_event_name"
                        android:inputType="textVisiblePassword|textNoSuggestions"
                        android:lines="1"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:backgroundTint="?android:attr/textColorSecondary"
                        android:textSize="20sp"
                        app:counterEnabled="true"
                        app:counterMaxLength="15"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:autofillHints="Title" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@drawable/round_corner_small"
                        android:backgroundTint="?android:attr/textColorSecondary"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title" />

                    <TextView
                        android:id="@+id/hour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@drawable/round_corner_small"
                        android:backgroundTint="?android:attr/textColorSecondary"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="@+id/date"
                        app:layout_constraintStart_toStartOf="@+id/date"
                        app:layout_constraintTop_toBottomOf="@+id/date" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/address_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/hour">

                        <EditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_corner_small"
                            android:layout_marginEnd="60dp"
                            android:padding="10dp"
                            android:inputType="textVisiblePassword|textNoSuggestions"
                            android:backgroundTint="?android:attr/textColorSecondary"
                            android:hint="@string/event_address"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="20sp"
                            tools:layout_editor_absoluteX="15dp"
                            tools:ignore="MissingConstraints"
                            android:autofillHints="Address" />

                        <ImageView
                            android:id="@+id/address_autocomplete"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/ic_place"
                            android:padding="5dp"
                            android:background="@drawable/circular_image_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/address"
                            app:layout_constraintTop_toTopOf="parent"
                            android:contentDescription="@string/image_description" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@drawable/round_corner_small"
                        android:backgroundTint="?android:attr/textColorSecondary"
                        android:gravity="top|left"
                        android:hint="@string/description"
                        android:inputType="textMultiLine|textNoSuggestions"
                        android:maxLines="5"
                        android:minHeight="150dp"
                        android:padding="10dp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/address_layout"
                        tools:ignore="RtlHardcoded"
                        android:autofillHints="Description" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/event_information">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintBottom_toTopOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/participant_title"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:id="@+id/participant_list_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_baseline_edit_24"
                        android:backgroundTint="?android:attr/textColorPrimary"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/textView3"
                        app:layout_constraintStart_toEndOf="@+id/textView3"
                        app:layout_constraintTop_toTopOf="@+id/textView3"
                        app:tint="?android:attr/textColorPrimary"
                        android:contentDescription="@string/participant_list_edition" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/participant_list"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/add_participant"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/ic_circle_add"
                            android:backgroundTint="?android:attr/textColorPrimary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:contentDescription="@string/add_participant" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        tools:layout_editor_absoluteX="20dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/create_event_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="?android:attr/textColorPrimary"
        android:background="?android:attr/textColorSecondary"
        android:text="@string/validate"/>

</LinearLayout>