<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2a3d43"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.06" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/my_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_activity"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/add_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_qr_scanner"
                android:layout_marginEnd="20dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/create_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <!-- Event list START -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.825"
        android:visibility="gone"
        android:id="@+id/eventPage">
        <ListView
            android:id="@+id/eventList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="5.0sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eventListEmpty"
            android:visibility="gone"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/no_event"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/planner"
                android:alpha="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/no_event_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:layout_marginTop="15dp"
                android:text="@string/no_event"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/eventListEmpty"
                app:layout_constraintStart_toStartOf="@+id/eventListEmpty"
                app:layout_constraintTop_toBottomOf="@+id/no_event" />

            <TextView
                android:id="@+id/no_event_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:layout_marginTop="15dp"
                android:text="@string/wait_invitation"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/no_event_text_1"
                app:layout_constraintStart_toStartOf="@+id/no_event_text_1"
                app:layout_constraintTop_toBottomOf="@+id/no_event_text_1"/>

            <TextView
                android:id="@+id/no_event_text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:layout_marginTop="10dp"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/no_event_text_2"
                app:layout_constraintStart_toStartOf="@+id/no_event_text_2"
                app:layout_constraintTop_toBottomOf="@+id/no_event_text_2"/>

            <TextView
                android:id="@+id/no_event_text_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_event_create_one"
                android:alpha="0.5"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/no_event_text_3"
                app:layout_constraintStart_toStartOf="@+id/no_event_text_3"
                app:layout_constraintTop_toBottomOf="@+id/no_event_text_3" />

            <ImageView
                android:id="@+id/create_event_reminder"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:alpha="0.9"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_circle_add"
                app:layout_constraintEnd_toEndOf="@+id/no_event_text_4"
                app:layout_constraintStart_toStartOf="@+id/no_event_text_4"
                app:layout_constraintTop_toBottomOf="@+id/no_event_text_4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
    <!-- Event list END -->

    <!-- Friend list START -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.825"
        android:paddingTop="10dp"
        android:visibility="gone"
        android:id="@+id/friendPage">

        <ListView
            android:id="@+id/friendList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="5.0sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/friendListEmpty"
            android:visibility="gone"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/alone"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/alone"
                android:alpha="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/alone_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:layout_marginTop="15dp"
                android:text="@string/no_friend"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/friendListEmpty"
                app:layout_constraintStart_toStartOf="@+id/friendListEmpty"
                app:layout_constraintTop_toBottomOf="@+id/alone" />

            <TextView
                android:id="@+id/alone_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_friend_qr_code"
                android:alpha="0.5"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/alone_text_1"
                app:layout_constraintStart_toStartOf="@+id/alone_text_1"
                app:layout_constraintTop_toBottomOf="@+id/alone_text_1" />

            <ImageView
                android:id="@+id/add_friend_reminder"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:alpha="0.9"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_qr_scanner"
                app:layout_constraintEnd_toEndOf="@+id/alone_text_2"
                app:layout_constraintStart_toStartOf="@+id/alone_text_2"
                app:layout_constraintTop_toBottomOf="@+id/alone_text_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>
    <!-- Friend list END -->

    <!-- Personal profile START -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.825"
        android:paddingTop="10dp"
        android:id="@+id/mainUserPage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

            <ImageView
                android:id="@+id/qr_code"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:alpha="0.9"
                android:layout_centerHorizontal="true"
                android:clickable="false"
                android:contentDescription="@string/qr_code"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
    <!-- Personal profile END -->

    <!-- This part is used in all pages form the activity -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.115">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:background="@drawable/round_corner"
            android:elevation="2dp"
            app:itemIconSize="35dp"
            app:itemIconTint="@drawable/item_selector"
            app:itemRippleColor="@android:color/transparent"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/homepage_item_menu" />

    </RelativeLayout>


</LinearLayout>